# PEA-TSP-2024

./: .gitignore  README.md
Assignment_1/Brute-Force/: CMakeLists.txt  GraphReader.h  Sprawko_wyniki1.csv  Sprawko_wyniki2.csv  TSP_BF.cpp  TSP_BF.h  config.txt  main.cpp  wyniki.csv  wyniki_pomiarow.csv
Assignment_1/Brute-Force/Instances/: tsp8_random.txt
Assignment_1/Nearest-Neighbour/: CMakeLists.txt  GraphReader.cpp  Porownanie_z_brute-force.csv  TSPInstance.h  TSP_NN.cpp  TSP_NN.h  TSP_NN_Recursion.cpp  TSP_NN_Recursion.h  Values_for_BxB.csv  Values_for_BxB2.csv  config.txt  main.cpp  sprawozdanie_NN.csv  sprawozdanie_NN_atsp.csv  sprawozdanie_NN_zero.csv  test.csv  wyniki.csv  wyniki_new.csv  wyniki_old.csv
Assignment_1/Nearest-Neighbour/Instances/: atsp10_random.txt  atsp11_random.txt  atsp12_random.txt  atsp13_random.txt  atsp14_random.txt  atsp7_random.txt  atsp8_random.txt  atsp9_random.txt  ft70.atsp  ry48p.atsp  tsp16_random.txt  tsp18_random.txt  tsp19_random.txt  tsp20_random.txt  tsp7_random.txt
Assignment_1/Random/: CMakeLists.txt  TSPInstance.cpp  TSPInstance.h  TSP_Random.cpp  TSP_Random.h  config.txt  main.cpp  random_results.csv  sprawozdanie_random.csv  sprawozdanie_random_atsp.csv  sprawozdanie_random_tsp.csv  wyniki.csv
Assignment_1/Random/Instances/: ftv55.atsp  pr124.tsp
Assignment_2/BxB/: BFS_wyniki_pomiarow.csv  CMakeLists.txt  LOWCOST_wyniki_pomiarow.csv  TSPInstance.cpp  TSPInstance.h  TSP_BxB.cpp  TSP_BxB.h  TSP_BxB_new.cpp  TSP_BxB_new.h  Test.csv  Test_best-first_NN.csv  Test_best-first_NN2.csv  Test_bestfirst.csv  Test_bfs.csv  Test_dfs.csv  Test_dfs_NN.csv  Test_new.csv  Test_new_best-first.csv  Test_new_dfs.csv  config.txt  main.cpp  wyniki_pomiarow.csv
Assignment_2/BxB/Instances/: tsp11_random.txt  tsp15_random.txt  tsp17_random.txt  (+6 more)
